@@ -79,7 +79,6 @@ ZESW(xc_cest_t *, void) xc_install_class(char *filename, xc_cest_t *cest, int op
 /* sandbox */
 typedef struct {
 	int alloc;
-	int orig_user_error_handler_error_reporting;
 	char *filename;
 
 	HashTable orig_included_files;
@@ -97,6 +96,14 @@ typedef struct {
 	HashTable tmp_auto_globals;
 	Bucket    *tmp_internal_function_tail;
 	Bucket    *tmp_internal_class_tail;
+
+#ifdef E_STRICT
+	int orig_user_error_handler_error_reporting;
+	ZEND_API void (*orig_zend_error_cb)(int type, const char *error_filename, const uint error_lineno, const char *format, va_list args);
+	zend_uint compilererror_cnt;
+	zend_uint compilererror_size;
+	xc_compilererror_t *compilererrors;
+#endif
 } xc_sandbox_t;
 
 typedef enum _xc_install_action_t {
